--- a/SapVisual/Recursos.qrc
+++ b/SapVisual/Recursos.qrc
@@ -50,5 +50,6 @@
         <file>Imagenes/fondos/repisa1.png</file>
         <file>Imagenes/fondos/techo.png</file>
         <file>Imagenes/fondos/estante.png</file>
+        <file>Imagenes/fondos/busqueda.png</file>
     </qresource>
 </RCC>
